tests/rosetta/out/Smalltalk/convert-seconds-to-compound-duration.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| timeStr wks ds hrs mins res comma |
timeStr := [:sec | wks := (sec / 604800).
sec := (sec % 604800).
ds := (sec / 86400).
sec := (sec % 86400).
hrs := (sec / 3600).
sec := (sec % 3600).
mins := (sec / 60).
sec := (sec % 60).
res := ''.
comma := false.
((wks ~= 0)) ifTrue: [
res := (((res + ((wks asString)))) + (' wk')).
comma := true.
] .
((ds ~= 0)) ifTrue: [
(comma) ifTrue: [
res := (res + (', ')).
] .
res := (((res + ((ds asString)))) + (' d')).
comma := true.
] .
((hrs ~= 0)) ifTrue: [
(comma) ifTrue: [
res := (res + (', ')).
] .
res := (((res + ((hrs asString)))) + (' hr')).
comma := true.
] .
((mins ~= 0)) ifTrue: [
(comma) ifTrue: [
res := (res + (', ')).
] .
res := (((res + ((mins asString)))) + (' min')).
comma := true.
] .
((sec ~= 0)) ifTrue: [
(comma) ifTrue: [
res := (res + (', ')).
] .
res := (((res + ((sec asString)))) + (' sec')).
] .
res. ].
Transcript show: (timeStr value: 7259) printString; cr.
Transcript show: (timeStr value: 86400) printString; cr.
Transcript show: (timeStr value: 6000000) printString; cr.
